Summary of important user-visible changes for cgi 0.1.0:
-------------------------------------------------------------------

 ** Initial release