@@ -1,5 +1,0 @@
-#!/usr/bin/octave -qH
-
-
-CGI = cgi();
-CGI.form.y
