@@ -1,3 +1,8 @@
+Summary of important user-visible changes for cgi 0.1.1:
+-------------------------------------------------------------------
+
+ ** Implemented semicolon as parameter separator
+
 Summary of important user-visible changes for cgi 0.1.0:
 -------------------------------------------------------------------
 
